fix: correct Location page layout issues
Adjust margin when signed out with no Add Review button

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -11,12 +11,6 @@
     margin: 0;
   }
 
-  &__full-width {
-    @include primary-button;
-
-    margin: 2.5rem 0;
-  }
-
   &__secondary {
     font-family: $roboto-stack;
     font-weight: 900;
