--- a/src/scss/components/_review-details.scss
+++ b/src/scss/components/_review-details.scss
@@ -60,8 +60,4 @@
     font-size: 1.1rem;
     color: $accent-color;
   }
-
-  @media (min-width: $bp-med-screen) {
-    order: 2;
-  }
 }
