--- a/src/scss/components/_review-header.scss
+++ b/src/scss/components/_review-header.scss
@@ -3,6 +3,7 @@
   background-color: #00945f;
   background-size: cover;
   position: relative;
+  margin-bottom: 2rem;
 
   @media (min-width: $bp-large-screen) {
     height: 27.25rem;
