--- a/src/scss/objects/_location-page.scss
+++ b/src/scss/objects/_location-page.scss
@@ -17,14 +17,14 @@
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: auto;
       grid-template-areas:
-        'nav . .'
+        'nav nav nav'
         'header header header'
+        'button button .'
         'review review overview';
     }
   }
 
   .review-nav {
-    order: -1;
     width: 100%;
 
     @supports (display: grid) {
@@ -40,11 +40,9 @@
   }
 
   .review-container {
-    order: 3;
-
     @media (min-width: $bp-rating-overview-move-right) {
       width: calc(66% - 4rem);
-      order: 2;
+      margin-top: 2rem;
 
       @supports (display: grid) {
         grid-area: review;
@@ -54,18 +52,13 @@
   }
 
   .review-details {
-    order: 2;
-
-    @media (max-width: $bp-rating-overview-move-right) {
-      margin-top: 2.5rem;
-    }
+    margin: 2rem 0;
 
     @media (min-width: $bp-rating-overview-move-right) {
       width: calc(33% - 4rem);
       align-self: flex-start;
-      margin: 8.8rem 0 0 1rem; // magic number that aligns the review-details with the top of review-submission.
+      margin-top: 2rem;
       flex-grow: 1;
-      order: 3;
 
       @supports (display: grid) {
         grid-area: overview;
@@ -73,6 +66,17 @@
         align-self: start;
         width: 100%;
       }
+    }
+  }
+
+  .review-button {
+    grid-area: button;
+
+    width: 100%;
+    margin: 0;
+
+    @media (min-width: $bp-rating-overview-move-right) {
+      width: initial;
     }
   }
 }
